Авторизация в сваггере успешно
