# backend/src/controllers/ProductController.ts
@@ -1,11 +1,7 @@
 import {ServerError} from "../middleware/errorHandler";
 import ProductService from "../services/ProductService";
 import {Controller, Get, Post, Body, BodyProp, Route, Tags, Security, Header} from "tsoa"
-import {IProduct, ISubstance} from "../models/DbModel";
-
-interface IProductExport extends IProduct{
-  substance: ISubstance,
-}
+import Product, {IProduct} from "../models/Product";
 
 interface ProductsArea {
   offset: number;
@@ -17,21 +13,26 @@ interface ProductsArea {
 @Security("api_key")
 class ProductController extends Controller{
   @Post("/part")
-  public async getPart(@Body() body: ProductsArea): {products: IProductExport[], count: number} {
-    console.log(body.offset, body.limit);
+  public async getPart(@Body() body: ProductsArea): {products: IProduct[], count: number} {
     const products = await ProductService.get(body.offset, body.limit);
     const count = await ProductService.getCount();
-    console.log(count, products);
     return {products, count};
   }
 
   @Get("{id}")
-  public async getById(id: number) : IProduct {
+  public async getById(id: number) : Promise<IProduct> {
     return await ProductService.getById(id);
     // const item = new TodoModel({description: description});
     // await item.save();
   }
-
+  
+  @Post()
+  public async insert(@Body() body: IProduct[]): Promise<boolean> {
+    for await (const el of body) {
+      await ProductService.create(el);
+    }
+    return true
+  }
 }
 
 
