# backend/src/models/DbModel.ts
@@ -60,14 +60,10 @@ Product.belongsTo(Substance, {as: 'substance'});
 // User.hasOne(UserDetails, {as: 'user_details'});
 User.belongsTo(UserDetails, {as: 'user_details'});
 
-export interface IProduct {
-  id: string;
-  name: string;
-}
 
 export interface ISubstance {
   name: string;
-  id: string;
+  id: number;
   code: string;
 }
 
